# omnicoder---better-than-termux

./: .gitignore  FALCON-ORBITAL.md  README.md  README.md.sha256
omnicoder-host/: BUILD-AARCH64.md  Cargo.toml  FALCON-INTERFACE.md  omnicoder-host-aarch64
omnicoder-host/src/: main.rs
receipts/: OMNICODER-V2-LIRIS-SOURCE-RECEIPT-2026-06-28.md
